--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -7,7 +7,7 @@
 }
 
 @misc{Stainless:github,
-  author = "The Stainless developers",
+  author = "{The Stainless developers}",
   title = "The Stainless repository",
   url = {https://github.com/epfl-lara/stainless},
   note = {Accessed 2019-06-19}
@@ -16,13 +16,13 @@
 
 @misc{Stainless:issue519,
   author = "Ramon Boss",
-  title = "Issue 519: Unknown type parameter type T in self referencing generic",
+  title = "Issue 519: Unknown type parameter type {T} in self referencing generic",
   url = {https://github.com/epfl-lara/stainless/issues/519},
   note = {Accessed 2019-06-27}
 }
 
 @misc{Stainless:pull470,
-  author = "The Stainless developers",
+  author = "{The Stainless developers}",
   title = "Pull request 470: Type aliases, type members, and dependent function types",
   url = {https://github.com/epfl-lara/stainless/pull/470},
   note = {Accessed 2019-06-27}
@@ -35,6 +35,14 @@
   url = {https://github.com/bitcoin-s},
   note = {Accessed 2019-06-19}
 }
+
+@misc{BitcoinS:pull435,
+  author = "Ramon Boss",
+  title = "Transaction can reference two different outputs of the same previous transaction",
+  url = {https://github.com/bitcoin-s/bitcoin-s/pull/435},
+  note = {Accessed 2019-06-19}
+}
+
 
 @misc{BitcoinS:website,
   author = "{Suredbits \& the bitcoin-s developers}",
